# web-to-app

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  IMPLEMENTATION_GUIDE.md  KEY_SERVER_DESIGN.md  KEY_SERVER_SUMMARY.md  KEY_SERVER_TEST_REPORT.md  LICENSE  NATIVEBRIDGE_VALIDATION_REPORT.md  PR_DESCRIPTION.md  README.md  README_CN.md  README_EN.md  WARP.md  app_log(1).txt  app_log.txt  build.gradle.kts  gradle.properties  rule.md  settings.gradle.kts  图标问题修复标准.md  歌曲api文档.md
.claude/: settings.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  aes_gcm.cpp  anti_debug.cpp  apk_optimizer.c  browser_kernel.c  crypto_engine.cpp  crypto_engine.h  crypto_optimized.c  crypto_optimized.h  go_exec_loader.c  hardware_control.c  integrity_check.cpp  node_bridge.cpp  node_launcher.c  perf_engine.c  sys_optimizer.c
docs/: _doc-maintenance.md  _doc-maintenance_CN.md  _doc-manual.md  _doc-manual_CN.md  build-and-release-guide.md  build-and-release-guide_CN.md  data-model-guide_CN.md  extension-module-guide.md  extension-module-guide_CN.md  feedback-guide.md  feedback-guide_CN.md  security-features-guide_CN.md  shell-build-guide.md  shell-mode-guide_CN.md  unit-test-guide.md  unit-test-guide_CN.md
modules/: README.md  registry.json
scripts/: init-keyserver.sh
shell/: .gitignore  build.gradle.kts  proguard-rules.pro
tmp_apk_inspect/: AndroidManifest.xml  resources.arsc
tools/: add_wta_switch_import.sh  audit_ui_design_system.py  (+2 more)
(+1509 files in other folders)
